--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": ">=16.8"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^24.0.25",
     "@types/react": "^16.9.17",
     "@types/react-test-renderer": "^16.9.1",
